--- a/Python/파이썬을 파이썬답게.ipynb
+++ b/Python/파이썬을 파이썬답게.ipynb
@@ -359,6 +359,129 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ef753fa-bfe1-45e1-9de2-562cfc7bd6f1",
+   "metadata": {},
+   "source": [
+    "# 알파벳 출력하기"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "d43ed42c-d4f0-4c88-b967-38d6b7b1731d",
+   "metadata": {},
+   "source": [
+    "문제 설명\n",
+    "입력으로 0이 주어지면 영문 소문자 알파벳을, 입력으로 1이 주어지면 영문 대문자 알파벳을 사전 순으로 출력하는 코드를 짜세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "5547d5f5-404e-4fb6-ad1c-5d83dd7d026f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abcdefghijklmnopqrstuvwxyz"
+     ]
+    }
+   ],
+   "source": [
+    "num = int(input().strip())\n",
+    "\n",
+    "if num == 0:\n",
+    "    for i in range(97, 123):\n",
+    "        print(chr(i), end='')\n",
+    "\n",
+    "if num == 1:\n",
+    "    for i in range(65, 91):\n",
+    "        print(chr(i), end='')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b451584c-9a88-4477-99c5-c1d02037cdf3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0123456789'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import string \n",
+    "\n",
+    "string.ascii_lowercase # 소문자 abcdefghijklmnopqrstuvwxyz\n",
+    "string.ascii_uppercase # 대문자 ABCDEFGHIJKLMNOPQRSTUVWXYZ\n",
+    "string.ascii_letters # 대소문자 모두 abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ\n",
+    "string.digits # 숫자 0123456789"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54861a4d-d5fd-4759-be6c-5f0a1a2acd1b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f0b9d59-e44d-47ac-a55a-ba5d2527a37b",
+   "metadata": {},
+   "source": [
+    "# 원본을 유지한채, 정렬된 리스트 구하기 - sorted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "74624b31-b904-47e5-96c0-96c4b659666c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list1 = [3, 2, 1]\n",
+    "list2 = [i for i in list1] # 또는 copy.deepcopy를 사용\n",
+    "list2.sort()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d1b548d5-3cd6-467f-a126-11403cf5433c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list1 = [3, 2, 1]\n",
+    "list2 = sorted(list1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c416f165-348a-42fe-9e9a-ac9c4f74045d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
