--- a/Python/파이썬을 파이썬답게.ipynb
+++ b/Python/파이썬을 파이썬답게.ipynb
@@ -482,6 +482,347 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7420727e-ed6b-46a7-abef-a913a906bb2b",
+   "metadata": {},
+   "source": [
+    "# 2차원 리스트 뒤집기"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "b8d1e91a-9e80-40b5-9c43-3d0c2112073a",
+   "metadata": {},
+   "source": [
+    "문제 설명\n",
+    "다음을 만족하는 함수, solution을 완성해주세요.\n",
+    "\n",
+    "solution 함수는 이차원 리스트, mylist를 인자로 받습니다\n",
+    "solution 함수는 mylist 원소의 행과 열을 뒤집은 한 값을 리턴해야합니다.\n",
+    "예를 들어 mylist [[1, 2, 3], [4, 5, 6], [7, 8, 9]]가 주어진 경우, solution 함수는 [[1, 4, 7], [2, 5, 8], [3, 6, 9]] 을 리턴하면 됩니다.\n",
+    "\n",
+    "제한 조건\n",
+    "mylist의 원소의 길이는 모두 같습니다.\n",
+    "mylist의 길이는 mylist[0]의 길이와 같습니다.\n",
+    "각 리스트의 길이는 100 이하인 자연수입니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "3d989c8e-23e3-413c-85b1-85b23fdfaeae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(mylist):\n",
+    "    answer = []\n",
+    "    \n",
+    "    for i in range(len(mylist)):\n",
+    "        lst = []\n",
+    "        for j in range(len(mylist)):\n",
+    "            lst.append(mylist[j][i])\n",
+    "        answer.append(lst)\n",
+    "        \n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a35a0fc3-460e-4b86-af27-30fd4f2bf502",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mylist = [[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n",
+    "new_list = list(map(list, zip(*mylist)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "ab2ee065-16b0-4627-8c23-fbca9026d2f6",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 40)\n",
+      "(2, 50)\n",
+      "(3, 60)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(3, 60)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mylist = [1, 2, 3]\n",
+    "new_list = [40, 50, 60]\n",
+    "for i in zip(mylist, new_list):\n",
+    "    print (i)\n",
+    "\n",
+    "(1, 40)\n",
+    "(2, 50)\n",
+    "(3, 60)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "21dd4c4a-c6c7-4fbf-96e1-281478fbeaa2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "animals = ['cat', 'dog', 'lion']\n",
+    "sounds = ['meow', 'woof', 'roar']\n",
+    "answer = dict(zip(animals, sounds)) # {'cat': 'meow', 'dog': 'woof', 'lion': 'roar'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5600f244-2566-48aa-a57b-5692c1a6f18b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e8209cc-5471-4da6-a2a6-9f197a2828b8",
+   "metadata": {},
+   "source": [
+    "# i번째 원소와 i+1번째 원소"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "9e6cff8a-eac1-4872-afd1-78ced4f23c27",
+   "metadata": {},
+   "source": [
+    "문제 설명\n",
+    "숫자를 담은 리스트 mylist가 solution 함수의 파라미터로 주어집니다. solution 함수가 mylist의 i번째 원소와 i+1번째 원소의 차를 담은 일차원 리스트에 차례로 담아 리턴하도록 코드를 작성해주세요.\n",
+    "\n",
+    "단, 마지막에 있는 원소는 (마지막+1)번째의 원소와의 차를 구할 수 없으니, 이 값은 구하지 않습니다.\n",
+    "\n",
+    "제한 조건\n",
+    "mylist의 길이는 1 이상 100 이하인 자연수입니다.\n",
+    "mylist의 원소는 1 이상 100 이하인 자연수입니다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "cd1bdc31-9331-4476-b585-5f5854690e87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(mylist):\n",
+    "    answer = []\n",
+    "\n",
+    "    for i in range(len(mylist)-1):\n",
+    "        answer.append(abs(mylist[i] - mylist[i+1]))\n",
+    "        \n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "b06b9b84-5932-473b-a404-4d05f2cb779d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(mylist):\n",
+    "    answer = []\n",
+    "    for number1, number2 in zip(mylist, mylist[1:]):\n",
+    "        answer.append(abs(number1 - number2))\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "1276899a-192a-42b6-8bd0-387b306370f7",
+   "metadata": {},
+   "source": [
+    "# zip 함수에 서로 길이가 다른 리스트가 인자로 들어오는 경우에는 길이가 짧은 쪽 까지만 이터레이션이 이루어집니다. 더 자세한 내용은 공식 레퍼런스 - zip의 내용을 참고해주세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ae0c94d-3191-4a03-ace9-8c9c2d8bd592",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7bf3bb3a-56b7-42f3-b06f-5b2df62b4b10",
+   "metadata": {},
+   "source": [
+    "# 모든 멤버의 type 변환하기"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "e4730fe8-8fe7-4f6f-87e0-2419d8154b7a",
+   "metadata": {},
+   "source": [
+    "문제 설명\n",
+    "문자열 리스트 mylist를 입력받아, 이 리스트를 정수형 리스트로 바꾼 값을 리턴하는 함수, solution을 만들어주세요. 예를 들어 mylist가 ['1', '100', '33'] 인 경우, solution 함수는 [1, 100, 33] 을 리턴하면 됩니다.\n",
+    "\n",
+    "제한조건\n",
+    "mylist의 길이는 100 이하인 자연수입니다.\n",
+    "mylist의 원소는 10진수 숫자로 표현할 수 있는 문자열입니다. 즉, 'as2' 와 같은 문자열은 들어있지 않습니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "23141633-84c4-4b0e-aeae-d479b5558962",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(mylist):\n",
+    "    answer = []\n",
+    "    answer = list(map(int, mylist))\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "ebcaecfc-5f9b-4047-92f9-a2d183bfe5a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list1 = ['1', '100', '33']\n",
+    "list2 = list(map(int, list1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d08d370-4ddb-421d-b56d-6b06fbb79559",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bcf3742d-b516-4fab-b24a-9c25b3d7dc85",
+   "metadata": {},
+   "source": [
+    "# map 함수 응용하기"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "faecf226-7e89-429e-acf5-d7b9925664cd",
+   "metadata": {},
+   "source": [
+    "문제 설명\n",
+    "정수를 담은 이차원 리스트, mylist 가 solution 함수의 파라미터로 주어집니다. solution 함수가 mylist 각 원소의 길이를 담은 리스트를 리턴하도록 빈칸을 완성해보세요.\n",
+    "\n",
+    "hint) 이전 강의에서 배운 map 함수를 활용해보세요\n",
+    "\n",
+    "제한 조건\n",
+    "mylist의 길이는 100 이하인 자연수입니다.\n",
+    "mylist 각 원소의 길이는 100 이하인 자연수입니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "075a41a9-7acb-49c3-901a-a084d326d603",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(mylist):\n",
+    "    answer = list(map(len, mylist))\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f06a451-278b-4c5c-832d-db98d1e3807f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3aba83a3-b4a1-4c4b-bf70-f46850bae2ce",
+   "metadata": {},
+   "source": [
+    "# sequence 멤버를 하나로 이어붙이기"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "bff5e41d-5f59-495e-99b8-5a00662a91dc",
+   "metadata": {},
+   "source": [
+    "문제 설명\n",
+    "문자열 리스트 mylist를 입력받아, 이 리스트의 원소를 모두 이어붙인 문자열을 리턴하는 함수, solution을 만들어주세요. 예를 들어 mylist가 ['1', '100', '33'] 인 경우, solution 함수는 '110033'을 리턴하면 됩니다.\n",
+    "\n",
+    "제한 조건\n",
+    "mylist의 길이는 100 이하인 자연수입니다.\n",
+    "mylist의 원소의 길이는 100 이하인 자연수입니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "0d8b1fd0-ccf8-4dd7-9939-f2ecd8fd7a36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(mylist):\n",
+    "    answer = ''\n",
+    "    answer = ''.join(mylist)\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "fd0b7bff-8c4a-4484-9dd5-a34cfda753a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다른 언어에서는..(또는 이 기능을 모르시는 분은)\n",
+    "# 보통 사람들은 for 문을 이용해 원소를 하나씩 이어 붙입니다.\n",
+    "my_list = ['1', '100', '33']\n",
+    "answer = ''\n",
+    "for value in my_list:\n",
+    "    answer += value\n",
+    "    \n",
+    "# 파이썬의 str.join(iterable)을 사용하면 이 코드를 두 줄로 줄일 수 있습니다 .\n",
+    "my_list = ['1', '100', '33']\n",
+    "answer = ''.join(my_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30328225-4793-42c9-a160-64b0a528dbce",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
