--- a/Python/파이썬을 파이썬답게.ipynb
+++ b/Python/파이썬을 파이썬답게.ipynb
@@ -823,6 +823,833 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ae50bba-85d0-4fe1-b95b-112235d9f483",
+   "metadata": {},
+   "source": [
+    "# 삼각형 별찍기"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "3ce3b206-f8fe-4c53-ac94-ccd05b585528",
+   "metadata": {},
+   "source": [
+    "문제 설명\n",
+    "이 문제에는 표준 입력으로 정수 n이 주어집니다.\n",
+    "별(*) 문자를 이용해 높이가 n인 삼각형을 출력해보세요.\n",
+    "\n",
+    "제한 조건\n",
+    "n은 100 이하인 자연수입니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "a92c4ee5-126a-40d3-adc4-915e5627b3a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*\n",
+      "**\n",
+      "***\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input().strip())\n",
+    "\n",
+    "for i in range(n):\n",
+    "    print(\"*\"*(i+1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1dfc1c51-47c9-4ba0-8b33-19a2b2ae65c8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "6de84286-0c42-4798-8f62-721b82fa3b8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('A', 'x', '1'), ('A', 'x', '2'), ('A', 'x', '3'), ('A', 'x', '4'), ('A', 'y', '1'), ('A', 'y', '2'), ('A', 'y', '3'), ('A', 'y', '4'), ('B', 'x', '1'), ('B', 'x', '2'), ('B', 'x', '3'), ('B', 'x', '4'), ('B', 'y', '1'), ('B', 'y', '2'), ('B', 'y', '3'), ('B', 'y', '4'), ('C', 'x', '1'), ('C', 'x', '2'), ('C', 'x', '3'), ('C', 'x', '4'), ('C', 'y', '1'), ('C', 'y', '2'), ('C', 'y', '3'), ('C', 'y', '4'), ('D', 'x', '1'), ('D', 'x', '2'), ('D', 'x', '3'), ('D', 'x', '4'), ('D', 'y', '1'), ('D', 'y', '2'), ('D', 'y', '3'), ('D', 'y', '4')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import itertools\n",
+    "\n",
+    "iterable1 = 'ABCD'\n",
+    "iterable2 = 'xy'\n",
+    "iterable3 = '1234'\n",
+    "print(list(itertools.product(iterable1, iterable2, iterable3)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b1b3fcb-e6ae-41da-837c-19d1447e4c57",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "537f7e2b-e8c5-484a-ad1c-2967f1182510",
+   "metadata": {},
+   "source": [
+    "# 2차원 리스트를 1차원 리스트로 만들기"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "ece9d79c-0115-400c-b7a6-358d5d92f6d7",
+   "metadata": {},
+   "source": [
+    "문제 설명\n",
+    "문자열을 담은 이차원 리스트, mylist 가 solution 함수의 파라미터로 주어집니다. solution 함수가 mylist를 일차원 리스트로 만들어 리턴하도록 코드를 작성해주세요.\n",
+    "\n",
+    "제한 조건\n",
+    "arr의 길이는 1 이상 100 이하인 자연수입니다.\n",
+    "arr 원소의 길이는 5를 넘지 않습니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "cb5fa2d3-9a5c-41f5-8e9d-3357fdc98f6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(mylist):\n",
+    "    answer = []\n",
+    "    for i in mylist:\n",
+    "        for j in i:\n",
+    "            answer.append(j)\n",
+    "    \n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b3921744-99e8-4b53-acc8-b1cbae86f3c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_list = [[1, 2], [3, 4], [5, 6]]\n",
+    "\n",
+    "# 방법 1 - sum 함수\n",
+    "answer = sum(my_list, [])\n",
+    "\n",
+    "# 방법 2 - itertools.chain\n",
+    "import itertools\n",
+    "list(itertools.chain.from_iterable(my_list))\n",
+    "\n",
+    "# 방법 3 - itertools와 unpacking\n",
+    "import itertools\n",
+    "list(itertools.chain(*my_list))\n",
+    "\n",
+    "# 방법 4 - list comprehension 이용\n",
+    "[element for array in my_list for element in array]\n",
+    "\n",
+    "# 방법 5 - reduce 함수 이용 1\n",
+    "from functools import reduce\n",
+    "list(reduce(lambda x, y: x+y, my_list))\n",
+    "\n",
+    "# 방법 6 - reduce 함수 이용 2\n",
+    "from functools import reduce\n",
+    "import operator\n",
+    "list(reduce(operator.add, my_list))\n",
+    "\n",
+    "# 방법 7 - numpy 라이브러리의 flatten 이용\n",
+    "import numpy as np\n",
+    "np.array(my_list).flatten().tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de87d42b-6de3-481f-a278-c20dab8c42aa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bda78a18-12e0-4304-bc68-07b5cb33df36",
+   "metadata": {},
+   "source": [
+    "# 순열과 조합"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "9fa11423-3296-47c1-9c53-6c94a34ab5b3",
+   "metadata": {},
+   "source": [
+    "문제 설명\n",
+    "숫자를 담은 일차원 리스트, mylist에 대해 mylist의 원소로 이루어진 모든 순열을 사전순으로 리턴하는 함수 solution을 완성해주세요.\n",
+    "\n",
+    "제한 조건\n",
+    "mylist 의 길이는 1 이상 100 이하인 자연수입니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1d1ddd0d-ff62-4a96-b977-35e9b1cd2998",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import permutations\n",
+    "\n",
+    "def solution(mylist):\n",
+    "    answer = [[]]\n",
+    "    answer = list(permutations(sorted(mylist), len(mylist)))\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "71b9370c-8d3a-4ef6-8f73-081346415dc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ABC', 'ACB', 'BAC', 'BCA', 'CAB', 'CBA']\n",
+      "['AB', 'AC', 'BA', 'BC', 'CA', 'CB']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import itertools\n",
+    "\n",
+    "pool = ['A', 'B', 'C']\n",
+    "print(list(map(''.join, itertools.permutations(pool)))) # 3개의 원소로 수열 만들기\n",
+    "print(list(map(''.join, itertools.permutations(pool, 2)))) # 2개의 원소로 수열 만들기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79c8c2c8-8008-4394-91a7-6813c22ced9f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "669e9087-362a-4d47-b3ac-5930aafad482",
+   "metadata": {},
+   "source": [
+    "# 가장 많이 등장하는 알파벳 찾기"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "be0f546d-41a8-489f-8fac-536b53a1a1cf",
+   "metadata": {},
+   "source": [
+    "문제 설명\n",
+    "이 문제에는 표준 입력으로 문자열, mystr이 주어집니다. mystr에서 가장 많이 등장하는 알파벳만을 사전 순으로 출력하는 코드를 작성해주세요.\n",
+    "\n",
+    "제한 조건\n",
+    "mystr의 원소는 알파벳 소문자로만 주어집니다.\n",
+    "mystr의 길이는 1 이상 100 이하입니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5af9e403-f5c8-4852-820f-5e9f59aabd79",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " aab\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_str = input().strip()\n",
+    "\n",
+    "answer = ''\n",
+    "alphabet = dict()\n",
+    "\n",
+    "for i in my_str:\n",
+    "    if i in alphabet:\n",
+    "        alphabet[i] += 1\n",
+    "    else: alphabet[i] = 1\n",
+    "\n",
+    "m = max(alphabet.values())\n",
+    "\n",
+    "for i in alphabet:\n",
+    "    if alphabet.get(i) == m:\n",
+    "        answer += i\n",
+    "        \n",
+    "answer = ''.join((sorted(answer)))\n",
+    "\n",
+    "print(answer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5a429090-864c-49dd-8087-d6d370588654",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "3\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import collections\n",
+    "my_list = [1, 2, 3, 4, 5, 6, 7, 8, 7, 9, 1, 2, 3, 3, 5, 2, 6, 8, 9, 0, 1, 1, 4, 7, 0]\n",
+    "answer = collections.Counter(my_list)\n",
+    "\n",
+    "print(answer[1]) # = 4\n",
+    "print(answer[3])  # = 3\n",
+    "print(answer[100]) # = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27d83890-c8e6-4452-9ac3-b259f17270cc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ccc656d-b76f-448f-b6df-e3854e8413d1",
+   "metadata": {},
+   "source": [
+    "# for 문과 if문을 한번에"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "caa0d9c8-6214-4c83-ac62-4a34b5a60836",
+   "metadata": {},
+   "source": [
+    "문제 설명\n",
+    "정수를 담은 리스트 mylist를 입력받아, 이 리스트의 원소 중 짝수인 값만을 제곱해 담은 새 리스트를 리턴하는 solution함수를 완성해주세요. 예를 들어, [3, 2, 6, 7]이 주어진 경우\n",
+    "\n",
+    "3은 홀수이므로 무시합니다.\n",
+    "2는 짝수이므로 제곱합니다.\n",
+    "6은 짝수이므로 제곱합니다.\n",
+    "7은 홀수이므로 무시합니다.\n",
+    "따라서 2의 제곱과 6의 제곱을 담은 리스트인 [4, 36]을 리턴해야합니다.\n",
+    "\n",
+    "제한 조건\n",
+    "mylist는 길이가 100이하인 배열입니다.\n",
+    "mylist의 원소는 1이상 100 이하인 정수입니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "268aaeed-c4ae-4ebe-af24-436e1b5408c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(mylist):\n",
+    "    answer = []\n",
+    "    list(map(lambda x : answer.append(x**2) if x % 2 == 0 else x, mylist))\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "7561ebb4-82f5-4dee-b053-b30289d0bbc0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mylist = [3, 2, 6, 7]\n",
+    "answer = [number**2 for number in mylist if number % 2 == 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cdca7a6c-a908-4833-947b-d04a7a89fcf9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28dbdb96-e9d1-4033-aa88-439351083a39",
+   "metadata": {},
+   "source": [
+    "# flag OR else"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "4e6b34db-7f7d-473e-ab10-d4252ae5b859",
+   "metadata": {},
+   "source": [
+    "문제 설명\n",
+    "본 문제에서는 자연수 5개가 주어집니다.\n",
+    "\n",
+    "숫자를 차례로 곱해 나온 수가 제곱수1가 되면 found를 출력하고\n",
+    "모든 수를 곱해도 제곱수가 나오지 않았다면 not found를 출력하는\n",
+    "코드를 작성해주세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "51f6a3e3-cb84-4d21-a92e-83c4b2ae2e8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 5\n",
+      " 1\n",
+      " 2\n",
+      " 3\n",
+      " 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "not found\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input())\n",
+    "\n",
+    "answer = 'not found'\n",
+    "\n",
+    "for i in range(4):\n",
+    "    n = int(input())\n",
+    "    a *= n\n",
+    "    if int(a**0.5) ** 2 ==  a:\n",
+    "        answer = 'found'\n",
+    "        break\n",
+    "\n",
+    "print(answer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "080706d5-cd66-4683-98f5-35c15ab2c2c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 5\n",
+      " 3\n",
+      " 2\n",
+      " 1\n",
+      " 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "not found\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    numbers = [int(input()) for _ in range(5)]\n",
+    "    multiplied = 1\n",
+    "    for number in numbers:\n",
+    "        multiplied *= number\n",
+    "        if math.sqrt(multiplied) == int(math.sqrt(multiplied)):\n",
+    "            print('found')\n",
+    "            break\n",
+    "    else:\n",
+    "        print('not found')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5bdd09be-db98-4ce4-9f4b-a4c00323f6f2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7122881-6ebe-4196-986e-35895f4baef1",
+   "metadata": {},
+   "source": [
+    "# 두 변수의 값 바꾸기"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "31f316c7-6fc4-4d8b-9ee1-c75efc967991",
+   "metadata": {},
+   "source": [
+    "a = 3\n",
+    "b = 'abc'\n",
+    "\n",
+    "temp = a\n",
+    "a = b\n",
+    "b = temp"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "025bfb1d-f1f9-492e-a7b6-a4fb7a3c7538",
+   "metadata": {},
+   "source": [
+    "a = 3\n",
+    "b = 'abc'\n",
+    "\n",
+    "a, b = b, a # 참 쉽죠?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d58a442b-e49a-4b9c-99f3-067cfe1c32ce",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1199e64-c0ec-4ba4-94c6-5f83b15cdb3e",
+   "metadata": {},
+   "source": [
+    "# 이진 탐색하기 - binary search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "27ed47ec-5822-4160-aa8e-fadf5237a870",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "def bisect(a, x, lo=0, hi=None):\n",
+    "    if lo < 0:\n",
+    "        raise ValueError('lo must be non-negative')\n",
+    "    if hi is None:\n",
+    "        hi = len(a)\n",
+    "    while lo < hi:\n",
+    "        mid = (lo + hi) // 2\n",
+    "        if a[mid] < x:\n",
+    "            lo = mid + 1\n",
+    "        else:\n",
+    "            hi = mid\n",
+    "    return lo\n",
+    "\n",
+    "mylist = [1, 2, 3, 7, 9, 11, 33]\n",
+    "print(bisect(mylist, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "718c9788-4b46-4531-9cb3-3fe23ae06ac0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "import bisect\n",
+    "mylist = [1, 2, 3, 7, 9, 11, 33]\n",
+    "print(bisect.bisect(mylist, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7fd04e34-6aac-4a69-b300-9eda6e5e4b04",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30aeebec-93fd-46cd-98ed-7fe49ae81437",
+   "metadata": {},
+   "source": [
+    "# 클래스 인스턴스 출력하기 - class의 자동 string casting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "5c218101-2d58-481e-8009-9da4222e2f74",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2)\n",
+      "(1, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Coord(object):\n",
+    "    def __init__(self, x, y):\n",
+    "        self.x, self.y = x, y\n",
+    "\n",
+    "point = Coord(1, 2)\n",
+    "print( '({}, {})'.format(point.x, point.y) ) \n",
+    "\n",
+    "# 또는\n",
+    "def print_coord(coord):\n",
+    "    print( '({}, {})'.format(coord.x, coord.y) )\n",
+    "print_coord(point)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "24f78f3c-090f-4629-b5d5-102a575f4d4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Coord(object):\n",
+    "    def __init__ (self, x, y):\n",
+    "        self.x, self.y = x, y\n",
+    "    def __str__ (self):\n",
+    "        return '({}, {})'.format(self.x, self.y)\n",
+    "\n",
+    "point = Coord(1, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db6c46f5-f64b-484a-90eb-ca7d3733355e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b12c4197-633a-44f6-abee-278a949ad1be",
+   "metadata": {},
+   "source": [
+    "# 가장 큰 수,inf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "0c7a12b8-dc1a-4e46-86f3-38c5ac6a311c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min_val = 99999\n",
+    "min_val > 100000000 # ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "c573a428-8206-4e20-8756-8368bf0c4f65",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min_val = float('inf')\n",
+    "min_val > 10000000000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "d541ff17-49c6-41fc-ab92-b433c13dfc7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max_val = float('-inf')\n",
+    "max_val > 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db1ad70b-1d5b-46fc-b074-1073839771b0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd4f0ee0-1131-4292-973f-7db6f133b41d",
+   "metadata": {},
+   "source": [
+    "# 파일 입출력 간단하게 하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "2ad1a142-c32f-4532-865b-0c2851c1c2f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['test']\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = open('myfile.txt', 'r')\n",
+    "while True:\n",
+    "    line = f.readline()\n",
+    "    if not line: \n",
+    "        break\n",
+    "    raw = line.split()\n",
+    "    print(raw)\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "015d4e87-6298-4344-90ed-4b76a7d589fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['test']\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('myfile.txt') as file:\n",
+    "    for line in file.readlines():\n",
+    "        print(line.strip().split('\\t'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4266ac82-9875-4f92-ac5e-44da0070be14",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
